<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="provider_authority" translatable="false">ac.mdiq.podcini.provider</string>
    <string name="languages">Languages</string>
    <string name="feed_update_receiver_name">Update subscriptions</string>
    <string name="feeds">Feeds</string>
    <string name="remote">Remote</string>
    <string name="pafeeds" translatable="false">PAFeeds</string>
    <string name="preferred_languages">Preferred languages</string>
    <string name="preferred_languages_sum">When media contains multiple language tracks, the player uses this setting to select proper tracks. Every feed containing such media also enables this setting. The player checks on feed setting first, if not set, uses the global setting, if still not set, default to [en-US, en-GB, en].</string>
    <string name="statistics_label">Statistics</string>
    <string name="add_feed_label">Add feeds</string>
    <string name="online_episodes_label">Online episodes</string>
    <string name="feed">Feed</string>
    <string name="facet">Facet</string>
    <string name="facets">Facets</string>
    <string name="episodes_label">Episodes</string>
    <string name="queue_label">Queues</string>
    <string name="settings_label">Settings</string>
    <string name="downloads_label">Downloads</string>
    <string name="logs_label">Logs</string>
    <string name="subscriptions_label">Subscriptions</string>
    <string name="library">Library</string>
    <string name="cancel_download_label">Cancel download</string>
    <string name="playback_history_label">History</string>
    <string name="overview">Overview</string>
    <string name="months_statistics_label">Months</string>
    <string name="notification_pref_fragment">Notifications</string>
    <string name="current_episode">Current</string>
    <string name="current_podcast">Podcast</string>
    <string name="no_more_screens_back">No more screens back</string>
    <string name="custum_folder_warning">The custom media folder can not be accessed. Something might be wrong with the file system of the device. Try reset it. Fall back to using internal media folder.</string>
    <string name="app_action_not_found">\"%1$s\" not found</string>
    <string name="swipeactions_label">Swipe actions</string>
    <string name="swipe_right">Swipe right</string>
    <string name="swipe_left">Swipe left</string>
    <string name="subscription">Subscription</string>
    <string name="statistics_speed_not_counted">Notice: Playback speed is never taken into account.</string>
    <string name="statistics_start_month">Start month</string>
    <string name="statistics_end_month">End month</string>
    <string name="statistics_month_year">Format: MM/YYYY</string>
    <string name="statistics_today">Today</string>
    <string name="statistics_filter_all_time">All time</string>
    <string name="statistics_reset_data">Reset statistics data</string>
    <string name="statistics_reset_data_msg">This will erase the history of duration played for all episodes. Are you sure you want to proceed\?</string>
    <string name="web_content_not_available">Web content is not available</string>
    <string name="language_not_supported_by_tts">The language is not supported by TTS</string>
    <string name="tts_init_failed">TTS init failed</string>
    <string name="episode_has_no_content">Episode has not content</string>
    <string name="unrestricted_background_permission_text">In order to successfully play a list of episodes in the background, Podcini needs Permission for Unrestricted Background Activity. Note on some brands, there are customized settings for this, please ensure to set them accordingly.</string>
    <string name="notification_check_permission">Check permission</string>
    <string name="notification_permission_text">Since Android 13, top level notification is needed for normal refresh and playback. You may disallow notifications of sub-catergories at your wish.</string>
    <string name="repeats_past_due">Repeat media past due</string>
    <string name="repeats_past_due_sum">You have %d scheduled media past due. Open the list?</string>
    <string name="reconnect_external_apps">Reconnect external apps</string>
    <string name="reconnect_external_apps_sum">You set to use external apps, but none of them are connected now. What do you want to do now?</string>
    <string name="reconnect">Reconnect</string>
    <string name="setting_off">Turn off setting</string>
    <string name="total_size_downloaded_podcasts">Total size of episodes on the device</string>
    <string name="log_file_share_exception">No compatible apps found</string>
    <string name="export_logs_menu_title">Export detailed logs</string>
    <string name="confirm_export_log_dialog_message">Detailed logs may contain sensitive information, such as your subscriptions list</string>
    <string name="open_in_browser_label">Open in browser</string>
    <string name="copy_url_label">Copy URL</string>
    <string name="share_url_label">Share URL</string>
    <string name="go_to_position_label">Go to this position</string>
    <string name="clear_logs">Clear the logs</string>
    <string name="clear_history_label">Clear history</string>
    <string name="clear_playback_history_msg">This will clear the entire playback history. Are you sure you want to proceed\?</string>
    <string name="remove_history_label">Remove from history</string>
    <string name="removed_history_label">Removed from history</string>
    <string name="confirm_label">Confirm</string>
    <string name="cancel_label">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset">Reset</string>
    <string name="global_default">Global default</string>
    <string name="change_stream">Change stream</string>
    <string name="last_full_update">Last full update</string>
    <string name="last_update">Last update</string>
    <string name="support_funding_label">Support</string>
    <string name="support_podcast">Support this podcast</string>
    <string name="error_label">Error</string>
    <string name="error_msg_prefix">An error occurred:</string>
    <string name="refresh_label">Refresh</string>
    <string name="full_refresh_label">Refresh full</string>
    <string name="clean_up">Clean up</string>
    <string name="fetch_size">Fetch size</string>
    <string name="clear_cache">Clear from cache</string>
    <string name="clear_all_cache">Clear all caches</string>
    <string name="new_synth_label">New synthetic feed</string>
    <string name="new_volume_label">New volume</string>
    <string name="toggle_grid_list">Toggle grid list</string>
    <string name="preparing">Preparing</string>
    <string name="refreshing_label">Refreshing</string>
    <string name="post_refreshing">Post refreshing</string>
    <string name="clear_new_label">Clear new</string>
    <string name="reconcile_label">Reconcile</string>
    <string name="chapters_label">Chapters</string>
    <string name="clips">Clips</string>
    <string name="ask_remove_clip">Do you want to remove clip: %1$s ?</string>
    <string name="marks">Marks</string>
    <string name="ask_remove_mark">Do you want to remove mark: %1$s ?</string>
    <string name="play_mark_msg">The mark can be sought to when the episode is being played.</string>
    <string name="send_to_device">Send to device</string>
    <string name="send_to_device_sum">Ensure the broadcast port number is the same as that on the receiver.</string>
    <string name="transfer_to_device">Transfer to device</string>
    <string name="send_catalog">Send catalog</string>
    <string name="send">Send</string>
    <string name="receiver_tag">Receiver: %1$s</string>
    <string name="receive_contents">Receive contents</string>
    <string name="chapter_duration0">Duration: </string>
    <string name="by">By</string>
    <string name="archived_feed">Feed is archived</string>
    <string name="description_label">Description</string>
    <string name="transcript">Transcript</string>
    <string name="show_all_feeds">Show all feeds</string>
    <string name="show_archived">Show archived</string>
    <string name="episodes_suffix">\u0020episodes</string>
    <string name="close_label">Close</string>
    <string name="retry_label">Retry</string>
    <string name="auto">Auto</string>
    <string name="enqueue">Enqueue</string>
    <string name="download">Download</string>
    <string name="auto_enqueue_sum">Enabling auto-enqueue adds qualified episodes to associated queue (on (auto-)refreshing).</string>
    <string name="auto_enqueue_sum1">Auto-enqueue requires associated queue not set to None.</string>
    <string name="auto_download_sum">Enabling auto-download downloads of qualified episodes and add them to associated queue (when it\'s not be set to None on (auto-)refreshing).</string>
    <string name="limit_episodes_to">Limit episodes to</string>
    <string name="limit_episodes_to_sum">Suggest a maximum number of episodes to keep. When exceeded, older episodes are erased. Specially marked episodes will be kept.</string>
    <string name="skip_first_hint">Skip first (seconds)</string>
    <string name="skip_last_hint">Skip last (seconds)</string>
    <string name="auto_download_label">Include in auto downloads</string>
    <string name="auto_delete_episode">Auto delete episode</string>
    <string name="auto_delete_sum">Delete after marked played</string>
    <string name="feed_volume_adapdation">Volume adaptation</string>
    <string name="feed_volume_adaptation_summary">Turn volume for episodes of this podcast up or down: %1$s</string>
    <string name="feed_volume_reduction_off">No adaption</string>
    <string name="feed_volume_reduction_light">Light reduction</string>
    <string name="feed_volume_reduction_heavy">Heavy reduction</string>
    <string name="feed_volume_boost_light">Light boost</string>
    <string name="feed_volume_boost_medium">Medium boost</string>
    <string name="feed_volume_boost_heavy">Heavy boost</string>
    <string name="feed_auto_download_always">Always</string>
    <string name="feed_auto_download_never">Never</string>
    <string name="video_mode_label">Video mode</string>
    <string name="pref_muxed_video">Prefer muxed video</string>
    <string name="pref_muxed_video_sum">This is only applicable when the source provides separate audio/video streams, as well as muxed video streams.</string>
    <string name="video_mode_window">Window mode</string>
    <string name="video_mode_fullscreen">Full screen</string>
    <string name="video_mode_audio_only">Audio only</string>
    <string name="feed_automation_policy">Automation policy</string>
    <string name="feed_auto_dleq_new">Only new items</string>
    <string name="replace">Replace</string>
    <string name="feed_auto_dleq_newer">Newest unplayed</string>
    <string name="feed_auto_dleq_older">Oldest unplayed</string>
    <string name="feed_auto_dleq_discretion">Discretionary</string>
    <string name="feed_auto_dleq_filter_sort">Current filter and sort</string>
    <string name="feed_auto_dleq_filter_sort_sum">Filter "Auto downloadable" is suggested to avoid undesired repeats.</string>
    <string name="add_to_queue">Add to queue…</string>
    <string name="remove_from_other_queues">Remove from other queues</string>
    <string name="create_synthetic_first_note">You need to create some synthetic feeds first</string>
    <string name="remove_from_current_feed">Remove from current feed</string>
    <string name="add_to_synthetic_note">For media from an external source, ensure to add them to a synthetic feed created for that source.</string>
    <string name="recent_episode">Recent episode</string>
    <string name="episode_cleanup_limit_by">Limit by</string>
    <string name="episode_cleanup_never">Never</string>
    <string name="episode_cleanup_except_favorite">When not favorited</string>
</resources>