<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <shortcut
        android:shortcutId="QUEUES"
        android:enabled="true"
        android:icon="@drawable/ic_playlist_shortcut"
        android:shortcutShortLabel="@string/queue_label">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="ac.mdiq.podcini"
            android:targetClass="ac.mdiq.podcini.activity.MainActivity">
            <url-template android:value="https://podcini.org/deeplink/main?page=QUEUES" />
        </intent>

        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">
            <parameter-binding
                android:key="feature"
                android:value="QUEUES" />
        </capability-binding>
    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_add"
        android:shortcutId="FindFeeds"
        android:shortcutShortLabel="@string/add_feed_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="ac.mdiq.podcini.activity.MainActivity">
            <extra android:name="shortcut_route" android:value="FindFeeds" />
        </intent>
    </shortcut>

    <shortcut
        android:shortcutId="FACETS"
        android:enabled="true"
        android:icon="@drawable/baseline_view_in_ar_24"
        android:shortcutShortLabel="@string/facets">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="ac.mdiq.podcini"
            android:targetClass="ac.mdiq.podcini.activity.MainActivity">
            <extra
                android:name="shortcut_route"
                android:value="FACETS" />
        </intent>

        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">
            <parameter-binding
                android:key="feature"
                android:value="FACETS" />
        </capability-binding>
    </shortcut>

    <shortcut
        android:shortcutId="LIBRARY"
        android:enabled="true"
        android:icon="@drawable/ic_subscriptions_shortcut"
        android:shortcutShortLabel="@string/library">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="ac.mdiq.podcini"
            android:targetClass="ac.mdiq.podcini.activity.MainActivity">
            <url-template android:value="https://podcini.org/deeplink/main?page=LIBRARY" />
        </intent>

        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">
            <parameter-binding
                android:key="feature"
                android:value="LIBRARY" />
        </capability-binding>
    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_refresh_shortcut"
        android:shortcutId="refresh"
        android:shortcutShortLabel="@string/refresh_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="ac.mdiq.podcini.activity.MainActivity">
            <extra
                android:name="refresh_on_start"
                android:value="true" />
        </intent>
    </shortcut>

    <!-- Open App Feature Capability -->
    <capability android:name="actions.intent.OPEN_APP_FEATURE">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="ac.mdiq.podcini"
            android:targetClass="ac.mdiq.podcini.activity.MainActivity">
            <url-template android:value="https://podcini.org/deeplink/main{?page}" />
            <parameter
                android:name="feature"
                android:key="page" />
        </intent>
    </capability>

    <!-- Search Capability -->
    <capability android:name="actions.intent.GET_THING">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="ac.mdiq.podcini"
            android:targetClass="ac.mdiq.podcini.activity.MainActivity">
            <url-template android:value="https://podcini.org/deeplink/search{?query}" />
            <parameter
                android:name="thing.name"
                android:key="query" />
        </intent>
    </capability>

    <!-- Entity Mappings for OPEN_APP_FEATURE -->
<!--    <shortcut-->
<!--        android:shortcutId="QUEUES"-->
<!--        android:enabled="true"-->
<!--        android:shortcutShortLabel="@string/queue_label">-->
<!--        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">-->
<!--            <parameter-binding-->
<!--                android:key="feature"-->
<!--                android:value="QUEUES" />-->
<!--        </capability-binding>-->
<!--    </shortcut>-->

<!--    <shortcut-->
<!--        android:shortcutId="FACETS"-->
<!--        android:enabled="true"-->
<!--        android:shortcutShortLabel="@string/facets">-->
<!--        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">-->
<!--            <parameter-binding-->
<!--                android:key="feature"-->
<!--                android:value="FACETS" />-->
<!--        </capability-binding>-->
<!--    </shortcut>-->

<!--    <shortcut-->
<!--        android:shortcutId="LIBRARY"-->
<!--        android:enabled="true"-->
<!--        android:shortcutShortLabel="@string/library">-->
<!--        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">-->
<!--            <parameter-binding-->
<!--                android:key="feature"-->
<!--                android:value="LIBRARY" />-->
<!--        </capability-binding>-->
<!--    </shortcut>-->

    <shortcut
        android:shortcutId="STATISTICS"
        android:enabled="true"
        android:shortcutShortLabel="@string/statistics_label">
        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">
            <parameter-binding
                android:key="feature"
                android:value="STATISTICS" />
        </capability-binding>
    </shortcut>
</shortcuts>
